# mcp-paperless-ngx

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: FUNDING.yml
